k8s/workloads/cortexflow_ui/deployment_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortexflow-ui-backend
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cortexflow-ui-backend
  template:
    metadata:
      labels:
        app: cortexflow-ui-backend
    spec:
      nodeSelector:
        role: head
      serviceAccountName: cortexflow-ui-backend
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: cortexflow-ui-backend
          image: ghcr.io/robodatalab/cortexflow-ui-backend:8de836cc78ef2ac2d79f234dd3d0816fed45d72a
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
