k8s/workloads/cortexflow_ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortexflow
  namespace: cortexflow-ui
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cortexflow.robodatalab.com
      secretName: robodatalab-wildcard-tls
  rules:
    - host: cortexflow.robodatalab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortexflow-ui-frontend
                port:
                  number: 80
